# addresource

./: .gitignore  README.md  pyproject.toml
.github/workflows/: main.yml
addresource/: addresource.py
tests/: test_addresource.py
